# arkui_for_android

./: .clang-format  .gitignore  AGENTS.md  OAT.xml  README-EN.md  README.en.md  README.md
capability/java/: capability.gni
capability/java/jni/bridge/: bridge_jni.cpp  bridge_jni.h  bridge_manager.cpp  bridge_manager.h  bridge_receiver.h  buffer_mapping.h
capability/java/jni/clipboard/: clipboard_impl.cpp  clipboard_impl.h  clipboard_jni.cpp  clipboard_jni.h  clipboard_proxy_impl.cpp  clipboard_proxy_impl.h  clipboard_utils.cpp  clipboard_utils.h  multiType_record_impl.cpp  multiType_record_impl.h  paste_data_impl.cpp  paste_data_impl.h
capability/java/jni/editing/: text_input_client_handler.cpp  text_input_client_handler.h  text_input_connection_impl.cpp  text_input_connection_impl.h  text_input_jni.cpp  text_input_jni.h  text_input_plugin.cpp  text_input_plugin.h
capability/java/jni/environment/: environment_impl.cpp  environment_impl.h  environment_jni.cpp  environment_jni.h  environment_proxy_impl.cpp  environment_proxy_impl.h
capability/java/jni/font/: font_platform_impl.cpp  font_platform_impl.h  font_platform_proxy_impl.cpp  font_platform_proxy_impl.h  system_font_jni.cpp  system_font_jni.h  system_font_manager.cpp  system_font_manager.h
capability/java/jni/grantresult/: grant_result_jni.cpp  grant_result_jni.h  grant_result_manager.cpp  grant_result_manager.h
capability/java/jni/plugin/: plugin_manager_jni.cpp  plugin_manager_jni.h
capability/java/jni/storage/: storage_impl.cpp  storage_impl.h  storage_jni.cpp  storage_jni.h  storage_proxy_impl.cpp  storage_proxy_impl.h
capability/java/jni/texture/: image_texture_jni.cpp  image_texture_jni.h
capability/java/jni/vibrator/: audio_haptic_player_impl.cpp  audio_haptic_player_impl.h  audio_haptic_player_jni.cpp  audio_haptic_player_jni.h  vibrator_controller_impl.cpp  vibrator_controller_impl.h  vibrator_controller_jni.cpp  vibrator_controller_jni.h  vibrator_impl.cpp  vibrator_impl.h  vibrator_jni.cpp  vibrator_jni.h  vibrator_proxy_impl.cpp  vibrator_proxy_impl.h
dependence/resmgr/: BUILD.gn
entrance/java/: BUILD.gn
entrance/java/jni/: BUILD.gn  ace_application_info_impl.cpp  ace_application_info_impl.h  ace_application_info_jni.cpp  ace_application_info_jni.h  ace_container.cpp  ace_container.h  ace_container_jni.cpp  ace_container_jni.h  ace_env_jni.cpp  ace_env_jni.h  ace_platform_plugin_jni.cpp  ace_platform_plugin_jni.h  ace_resource_register.cpp  ace_resource_register.h  ace_translate_manager.cpp  apk_asset_provider.h  display_info.cpp  display_info.h  display_info_jni.cpp  display_info_jni.h  display_manager_agent.cpp  display_manager_agent.h  display_manager_agent_jni.cpp  display_manager_agent_jni.h  download_manager.cpp  download_manager_jni.cpp  download_manager_jni.h  dump_helper_jni.cpp  dump_helper_jni.h  flutter_ace_view.cpp  flutter_ace_view.h  flutter_ace_view_jni.cpp  flutter_ace_view_jni.h  foldable_window_android.cpp  java_event_callback.cpp  java_event_callback.h  jni_app_mode_config.cpp  jni_app_mode_config.h  jni_environment.cpp  (+27 more)
entrance/java/jni/html/: html_to_span.cpp  html_to_span.h  span_to_html.cpp
entrance/java/jni/interaction/: interaction_impl.cpp  interaction_impl.h
entrance/java/jni/msdp/: interaction_impl.cpp  interaction_impl.h
entrance/java/jni/picker/: picker_haptic_controller.cpp  picker_haptic_controller.h  picker_haptic_factory.cpp  picker_haptic_factory.h  picker_haptic_impl.cpp  picker_haptic_impl.h  picker_haptic_interface.h
entrance/java/jni/report/: reporter_impl.cpp  reporter_impl.h
entrance/java/jni/timepicker/: timepicker_haptic_factory.cpp
entrance/java/jni/udmf/: udmf_impl.cpp  udmf_impl.h
entrance/java/jni/ui_session/: ui_session_json_util.cpp  ui_session_manager_android.cpp  ui_session_manager_android.h
osal/: BUILD.gn  accessibility_event_manager.cpp  accessibility_event_manager.h  accessibility_manager_impl.cpp  accessibility_manager_impl.h  accessibility_type_convertor.cpp  accessibility_type_convertor.h  ace_checker.cpp  ace_engine_ext.cpp  ace_forward_compatibility.cpp  ace_trace.cpp  app_bar_helper_impl.cpp  click_sound_effect_manager.cpp  cpu_boost.cpp  display_info_utils.cpp  display_manager_android.cpp  display_manager_android.h  download_manager_android.cpp  download_manager_android_v2.cpp  drag_window.cpp  drawable_descriptor_android.cpp  drawable_descriptor_android.h  drawing_color_filter_android.cpp  drawing_color_filter_android.h  drawing_lattice_android.cpp  drawing_lattice_android.h  dynamic_module_helper.cpp  event_report.cpp  fake_accessibility_manager.cpp  feature_manager.cpp  feature_param.cpp  file_asset_provider.cpp  file_asset_provider.h  file_uri_helper_android.cpp  frame_report.cpp  frame_trace_adapter_impl.cpp  frame_trace_adapter_impl.h  high_contrast_observer.cpp  high_contrast_observer.h  hitrace_meter.cpp  (+57 more)
osal/advance/: ai_write_adapter.cpp  data_detector_adapter.cpp  data_detector_mgr.cpp  image_analyzer_adapter_impl.cpp  image_analyzer_manager.cpp  image_analyzer_mgr.cpp  text_share_adapter.cpp  text_translation_adapter.cpp
osal/fonts/: hwnotdef.xml  hwsymbol.xml
osal/mock/: accessibility_constants.cpp  accessibility_constants.h  accessibility_definitions.h  accessibility_element_info.cpp  accessibility_element_info.h  accessibility_element_operator.h  accessibility_element_operator_callback.h  accessibility_event_info.cpp  accessibility_event_info.h  accessibility_state_event.h  accessible_ability_operator_callback_impl.h
osal/platformview/: platform_view_impl.cpp  platform_view_impl.h  platform_view_plugin.cpp  platform_view_plugin.h  platform_view_register.cpp  platform_view_register.h
osal/platformview/resource/: platform_view_delegate.cpp  platform_view_delegate.h  platform_view_resource.cpp  platform_view_resource.h
stage/ability/java/: BUILD.gn
stage/uicontent/: BUILD.gn  ace_container_sg.cpp  ace_container_sg.h  ace_view_sg.cpp  ace_view_sg.h  platform_event_callback.h  ui_content_impl.cpp  ui_content_impl.h  ui_event_monitor.cpp  ui_event_monitor.h  uicontent.gni
(+232 files in other folders)
