# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/ace/ace_engine/ace_config.gni")

# common capability java files
common_capability_java_files = [
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/clipboard/ClipboardPluginBase.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/editing/TextEditState.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/editing/TextInputAction.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/editing/TextInputConfiguration.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/editing/TextInputDelegate.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/editing/TextInputPluginBase.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/editing/TextInputType.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/environment/EnvironmentBase.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/storage/PersistentStorageBase.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/vibrator/VibratorPluginBase.java",
]

# android capability java files
android_capability_java_files = [
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/clipboard/ClipboardPluginAosp.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/editing/InputConnectionWrapper.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/editing/TextInputPluginAosp.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/environment/EnvironmentAosp.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/storage/PersistentStorageAosp.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/vibrator/VibratorPluginAosp.java",
]

# capability cpp files
capability_cpp_files = [
  "$ace_root/adapter/android/capability/java/jni/clipboard/clipboard_impl.cpp",
  "$ace_root/adapter/android/capability/java/jni/clipboard/clipboard_jni.cpp",
  "$ace_root/adapter/android/capability/java/jni/clipboard/clipboard_proxy_impl.cpp",
  "$ace_root/adapter/android/capability/java/jni/editing/text_input_client_handler.cpp",
  "$ace_root/adapter/android/capability/java/jni/editing/text_input_connection_impl.cpp",
  "$ace_root/adapter/android/capability/java/jni/editing/text_input_jni.cpp",
  "$ace_root/adapter/android/capability/java/jni/editing/text_input_plugin.cpp",
  "$ace_root/adapter/android/capability/java/jni/environment/environment_impl.cpp",
  "$ace_root/adapter/android/capability/java/jni/environment/environment_jni.cpp",
  "$ace_root/adapter/android/capability/java/jni/environment/environment_proxy_impl.cpp",
  "$ace_root/adapter/android/capability/java/jni/storage/storage_impl.cpp",
  "$ace_root/adapter/android/capability/java/jni/storage/storage_jni.cpp",
  "$ace_root/adapter/android/capability/java/jni/storage/storage_proxy_impl.cpp",
  "$ace_root/adapter/android/capability/java/jni/vibrator/vibrator_impl.cpp",
  "$ace_root/adapter/android/capability/java/jni/vibrator/vibrator_jni.cpp",
  "$ace_root/adapter/android/capability/java/jni/vibrator/vibrator_proxy_impl.cpp",
]
