# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/arkui/ace_engine/ace_config.gni")

# common capability java files
common_capability_java_files = [
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/clipboard/ClipboardPluginBase.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/editing/TextEditState.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/editing/TextInputAction.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/editing/TextInputConfiguration.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/editing/TextInputDelegate.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/editing/TextInputPluginBase.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/editing/TextInputType.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/keyboard/KeyboardHeightObserver.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/keyboard/KeyboardHeightProvider.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/environment/EnvironmentBase.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/storage/PersistentStorageBase.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/texture/IAceTexture.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/vibrator/VibratorPluginBase.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/plugin/PluginManager.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/video/AceVideoBase.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/video/AceVideoPluginBase.java",

  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/web/AceWebBase.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/web/AceWebPluginBase.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/web/IAceWebErrorReceiveObject.java",
]

# android capability java files
android_capability_java_files = [
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/clipboard/ClipboardPluginAosp.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/editing/InputConnectionWrapper.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/editing/TextInputErrorTextHandler.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/editing/TextInputFilter.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/editing/TextInputPluginAosp.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/environment/EnvironmentAosp.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/grantresult/GrantResult.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/storage/PersistentStorageAosp.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/surface/AceSurfacePluginAosp.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/surface/AceSurfaceView.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/texture/AceTexture.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/texture/AceTexturePluginAosp.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/vibrator/VibratorPluginAosp.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/video/AceVideoAosp.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/video/AceVideoPluginAosp.java",

  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/web/webdatabase/WebDataBaseColumns.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/web/webdatabase/WebDataBaseHelper.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/web/webdatabase/WebDataBaseCredential.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/web/webdatabase/WebDataBaseHttpAuth.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/web/webdatabase/WebDataBaseCredentialDao.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/web/webdatabase/WebDataBaseHttpAuthDao.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/web/webdatabase/WebDataBaseManager.java",

  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/web/AceWeb.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/web/AceWebPluginAosp.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/web/AceWebErrorReceiveObject.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/web/AceWebScrollObject.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/web/AceWebHttpErrorReceiveObject.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/web/AceWebScaleObject.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/web/AceWebConsoleMessageObject.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/web/AceWebOverrideUrlObject.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/web/AceWebFileChooserObject.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/web/AceWebGeolocationPermissionsShowObject.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/web/AceWebDownloadStartObject.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/web/AceWebHttpAuthRequestObject.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/web/AceWebPermissionRequestObject.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/web/AceWebJsDialogObject.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/web/AceWebJsPromptObject.java",

  # bridge files
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/bridge/BridgeBaseCodec.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/bridge/BridgeBinaryCodec.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/bridge/BridgeErrorCode.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/bridge/BridgeManager.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/bridge/BridgePlugin.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/bridge/BridgeSerializer.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/bridge/BridgeTaskQueue.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/bridge/BridgeTaskQueueHandler.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/bridge/IMessageListener.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/bridge/IMethodResult.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/bridge/MethodData.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/bridge/ParameterHelper.java",
  "$ace_root/adapter/android/capability/java/src/ohos/ace/adapter/capability/bridge/TaskOption.java",
]

# capability cpp files
capability_cpp_files = [
  "$ace_root/adapter/android/capability/java/jni/bridge/bridge_jni.cpp",
  "$ace_root/adapter/android/capability/java/jni/bridge/bridge_manager.cpp",
  "$ace_root/adapter/android/capability/java/jni/clipboard/clipboard_impl.cpp",
  "$ace_root/adapter/android/capability/java/jni/clipboard/clipboard_jni.cpp",
  "$ace_root/adapter/android/capability/java/jni/clipboard/clipboard_proxy_impl.cpp",
  "$ace_root/adapter/android/capability/java/jni/editing/text_input_client_handler.cpp",
  "$ace_root/adapter/android/capability/java/jni/editing/text_input_connection_impl.cpp",
  "$ace_root/adapter/android/capability/java/jni/editing/text_input_jni.cpp",
  "$ace_root/adapter/android/capability/java/jni/editing/text_input_plugin.cpp",
  "$ace_root/adapter/android/capability/java/jni/environment/environment_impl.cpp",
  "$ace_root/adapter/android/capability/java/jni/environment/environment_jni.cpp",
  "$ace_root/adapter/android/capability/java/jni/environment/environment_proxy_impl.cpp",
  "$ace_root/adapter/android/capability/java/jni/grantresult/grant_result_jni.cpp",
  "$ace_root/adapter/android/capability/java/jni/grantresult/grant_result_manager.cpp",
  "$ace_root/adapter/android/capability/java/jni/storage/storage_impl.cpp",
  "$ace_root/adapter/android/capability/java/jni/storage/storage_jni.cpp",
  "$ace_root/adapter/android/capability/java/jni/storage/storage_proxy_impl.cpp",
  "$ace_root/adapter/android/capability/java/jni/vibrator/vibrator_impl.cpp",
  "$ace_root/adapter/android/capability/java/jni/vibrator/vibrator_jni.cpp",
  "$ace_root/adapter/android/capability/java/jni/vibrator/vibrator_proxy_impl.cpp",
  "$ace_root/adapter/android/capability/java/jni/plugin/plugin_manager_jni.cpp",
]
