# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/global/resource_management/resmgr.gni")
import("//build/ohos.gni")

config("resmgr_config") {
  include_dirs = [
    "//base/global/resource_management/frameworks/resmgr/include",
    "//third_party/zlib/contrib/minizip",
    "//base/global/resource_management/interfaces/inner_api/include",
    "//third_party/bounds_checking_function/include",
  ]

  if (resource_management_support_icu) {
    include_dirs += [
      "//third_party/icu/icu4c/source",
      "//third_party/icu/icu4c/source/common",
      "//third_party/icu/icu4c/source/i18n",
    ]
    defines = [ "SUPPORT_GRAPHICS" ]
  }
}

manager_sources = [
  "//base/global/resource_management/frameworks/resmgr/src/hap_manager.cpp",
  "//base/global/resource_management/frameworks/resmgr/src/hap_resource.cpp",
  "//base/global/resource_management/frameworks/resmgr/src/locale_matcher.cpp",
  "//base/global/resource_management/frameworks/resmgr/src/lock.cpp",
  "//base/global/resource_management/frameworks/resmgr/src/res_config_impl.cpp",
  "//base/global/resource_management/frameworks/resmgr/src/res_desc.cpp",
  "//base/global/resource_management/frameworks/resmgr/src/res_locale.cpp",
  "//base/global/resource_management/frameworks/resmgr/src/resource_manager_impl.cpp",
  "//base/global/resource_management/frameworks/resmgr/src/utils/hap_parser.cpp",
  "//base/global/resource_management/frameworks/resmgr/src/utils/psue_manager.cpp",
  "//base/global/resource_management/frameworks/resmgr/src/utils/string_utils.cpp",
  "//base/global/resource_management/frameworks/resmgr/src/utils/utils.cpp",
]

config("resmgr_public_config") {
  visibility = [ ":*" ]

  include_dirs =
      [ "//base/global/resource_management/interfaces/inner_api/include" ]

  if (resource_management_support_icu) {
    include_dirs += [ "//third_party/icu/icu4c/source/common" ]
    defines = [ "SUPPORT_GRAPHICS" ]
  }
}

ohos_shared_library("global_resmgr") {
  if (resource_management_support_icu) {
    defines = [ "__ARKUI_CROSS__" ]
    cflags = [
      "-std=c++17",
      "-Wno-ignored-attributes",
    ]

    sources = manager_sources

    configs = [ ":resmgr_config" ]

    public_configs = [ ":resmgr_public_config" ]

    deps = [
      "//third_party/bounds_checking_function:libsec_shared",
      "//third_party/zlib:libz",
    ]

    if (resource_management_support_icu) {
      deps += [
        "//third_party/icu/icu4c:shared_icui18n",
        "//third_party/icu/icu4c:shared_icuuc",
      ]
    }
    if (target_os == "android") {
      aosp_deps = [ "shared_library:liblog" ]
    }
  }
  subsystem_name = "global"
  part_name = "resource_management"
}
