/*
 * Copyright (c) 2021 Huawei Device Co., Ltd.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

import("//build/ohos.gni")
import("//foundation/ace/ace_engine/ace_config.gni")
import("//foundation/ace/ace_engine/adapter/android/capability/java/capability.gni")

# common java files
common_java_files = [
  "$ace_root/adapter/android/entrance/java/src/ohos/ace/adapter/AceApplicationInfo.java",
  "$ace_root/adapter/android/entrance/java/src/ohos/ace/adapter/AceContainer.java",
  "$ace_root/adapter/android/entrance/java/src/ohos/ace/adapter/AceEnv.java",
  "$ace_root/adapter/android/entrance/java/src/ohos/ace/adapter/AceEventCallback.java",
  "$ace_root/adapter/android/entrance/java/src/ohos/ace/adapter/AEventReport.java",
  "$ace_root/adapter/android/entrance/java/src/ohos/ace/adapter/ALog.java",
  "$ace_root/adapter/android/entrance/java/src/ohos/ace/adapter/DumpHelper.java",
  "$ace_root/adapter/android/entrance/java/src/ohos/ace/adapter/EventInfo.java",
  "$ace_root/adapter/android/entrance/java/src/ohos/ace/adapter/IAceView.java",
  "$ace_root/adapter/android/entrance/java/src/ohos/ace/adapter/IAceViewCreator.java",
  "$ace_root/adapter/android/entrance/java/src/ohos/ace/adapter/IEventReport.java",
  "$ace_root/adapter/android/entrance/java/src/ohos/ace/adapter/ILogger.java",
  "$ace_root/adapter/android/entrance/java/src/ohos/ace/adapter/LibraryLoader.java",
  "$ace_root/adapter/android/entrance/java/src/ohos/ace/adapter/AceResourceRegister.java",
  "$ace_root/adapter/android/entrance/java/src/ohos/ace/adapter/AceResourcePlugin.java",
  "$ace_root/adapter/android/entrance/java/src/ohos/ace/adapter/IAceOnResourceEvent.java",
  "$ace_root/adapter/android/entrance/java/src/ohos/ace/adapter/IAceOnCallResourceMethod.java",
  "$ace_root/adapter/android/entrance/java/src/ohos/ace/adapter/IAceLocaleChanged.java",
  "$ace_root/adapter/android/entrance/java/src/ohos/ace/adapter/IAceLocaleFallback.java",
  "$ace_root/adapter/android/entrance/java/src/ohos/ace/adapter/dfx/JankDetector.java",
]

# build common jar
java_library("ace_platform_common_java") {
  java_files = common_java_files
  java_files += common_capability_java_files

  # deps = [ "//third_party/fastjson/repackaged:fastjson_utils_java" ]

  subsystem_name = "ace"
  part_name = "ace_engine_cross"
}

# build android jar
java_library("ace_platform_android_java") {
  java_files = [
    "$ace_root/adapter/android/entrance/java/src/ohos/ace/adapter/AceActivity.java",
    "$ace_root/adapter/android/entrance/java/src/ohos/ace/adapter/AceApplication.java",
    "$ace_root/adapter/android/entrance/java/src/ohos/ace/adapter/AceEventProcessorAosp.java",
    "$ace_root/adapter/android/entrance/java/src/ohos/ace/adapter/AceViewAosp.java",
    "$ace_root/adapter/android/entrance/java/src/ohos/ace/adapter/AceViewCreatorAosp.java",
    "$ace_root/adapter/android/entrance/java/src/ohos/ace/adapter/AceVsyncWaiter.java",
    "$ace_root/adapter/android/entrance/java/src/ohos/ace/adapter/DeviceInfoHelperAosp.java",
    "$ace_root/adapter/android/entrance/java/src/ohos/ace/adapter/DownloadManager.java",
    "$ace_root/adapter/android/entrance/java/src/ohos/ace/adapter/EventReport.java",
    "$ace_root/adapter/android/entrance/java/src/ohos/ace/adapter/LoggerAosp.java",
  ]

  java_files += android_capability_java_files

  deps = [
    ":ace_platform_common_java",
  ]
  subsystem_name = "ace"
  part_name = "ace_engine_cross"
}

